# validador_cli

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  run.py
tests/: test_utils.py
validador/: main.py  utils.py
validador_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
